--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tanggal"><u>tanggal</u></string>
     <string name="jam"><u>jam</u></string>
+
+    <string-array name="judul_artikel">
+        <item>Cara Cuci Sepatu dengan Benar</item>
+        <item>Bingung Cara Setrika Pakaian?</item>
+        <item>6 Keuntungan Menggunakan Jasa Laundry</item>
+        <item>Tips Memiliih Pewangi Pakaian yang Tahan Lama</item>
+        <item>Mencuci Pakaian Sesuai Dengan Bahan Kain</item>
+    </string-array>
 </resources>
