20230109 - benerin bahasa, UI OrderDetail (user&laundry), rapihin font #BrillyMustBeProud

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="close">Close Navigation Drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="tanggal"><u>tanggal</u></string>
-    <string name="jam"><u>jam</u></string>
+    <string name="tanggal"><u>Tanggal</u></string>
+    <string name="jam"><u>Jam</u></string>
 
     <string-array name="judul_artikel">
         <item>Cara Cuci Sepatu dengan Benar</item>
